Fixed notifications z-index

--- a/web/bundles/dodicifansworldweb/less/bootstrap/notify.less
+++ b/web/bundles/dodicifansworldweb/less/bootstrap/notify.less
@@ -2,33 +2,34 @@
 // -------------
 
 .notifications {
-  position: fixed;
+    position: fixed;
+    z-index: 999999;
 }
 
 /* Positioning */ 
 .notifications.top-right {
-  right: 10px;
-  top: 50px;
+    right: 10px;
+    top: 50px;
 }
 
 .notifications.top-left {
-  left: 10px;
-  top: 50px;
+    left: 10px;
+    top: 50px;
 }
 
 .notifications.bottom-left {
-  left: 10px;
-  bottom: 50px;
+    left: 10px;
+    bottom: 50px;
 }
 
 .notifications.bottom-right {
-  right: 10px;
-  bottom: 50px;
+    right: 10px;
+    bottom: 50px;
 }
 
 /* Notification Element */
 .notifications > div {
-  position: relative;
-  z-index: 9999;
-  margin: 5px 0px;
+    position: relative;
+    z-index: 9999;
+    margin: 5px 0px;
 }
